--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
+dist: trusty
+addons:
+ apt:
+   sources:
+     - ubuntu-toolchain-r-test
+     - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-4.0 main' key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+   packages:
+     - clang-4.0
+
+language: cpp
 language: php
-compiler: clang
 php:
   - 7.0
   - 7.1
