--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-dist: trusty
-addons:
- apt:
-   sources:
-     - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-4.0 main' key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
-   packages:
-     - clang-4.0
-
 language: php
+addons:
+  apt:
+    packages:
+      - llvm-4.0
 php:
   - 7.0
   - 7.1
