--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: php
 addons:
   apt:
+    sources:
+      - llvm-toolchain-trusty-4.0
     packages:
-      - llvm-4.0
+      - clang-4.0
 php:
   - 7.0
   - 7.1
