--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ php:
 
 env:
   global:
+    - LLVM_CONFIG=llvm-config-4.0
     - REPORT_EXIT_STATUS=1
     - RULE="all"
     - DEF="-q --show-diff"
