--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: php
 addons:
   apt:
     sources:
-      - llvm-toolchain-trusty-4.0
+      - llvm-toolchain-trusty-5.0
     packages:
-      - clang-4.0
+      - libllvm5.0
 php:
   - 7.0
   - 7.1
@@ -13,7 +13,6 @@ php:
 
 env:
   global:
-    - LLVM_CONFIG=llvm-config-4.0
     - REPORT_EXIT_STATUS=1
     - RULE="all"
     - DEF="-q --show-diff"
