--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
     sources:
       - llvm-toolchain-trusty-5.0
     packages:
-      - libllvm5.0
+      - llvm-5.0
       - llvm-5.0-dev
 php:
   - 7.0
