--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ php:
 
 env:
   global:
+    - LLVM_CONFIG=llvm-config-5.0
     - REPORT_EXIT_STATUS=1
     - RULE="all"
     - DEF="-q --show-diff"
@@ -38,6 +39,7 @@ before_script:
   - echo "opcache.optimization_level=0x7FFEBFFF" >> $HOME/.phpenv/versions/$TRAVIS_PHP_VERSION/etc/conf.d/opcache.ini
 
 script:
+  - ls -lash /usr/bin
   - cd $TRAVIS_BUILD_DIR
   - phpize
   - wget -q -O run-tests.php https://raw.githubusercontent.com/php/php-src/master/run-tests.php
