--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
       env: OPCACHE=0 TEST_PHP_ARGS="$DEF $MEMCHECK"
 
 before_install:
-  - test $CONF != "with-uref-coverage" || pip install --user cpp-coveralls
+  - test $RULE != "uref-test-coverage-travis" || pip install --user cpp-coveralls
 
 before_script:
   - echo "variables_order=EGPCS"                 >> $HOME/.phpenv/versions/$TRAVIS_PHP_VERSION/etc/php.ini
@@ -49,4 +49,4 @@ script:
   - php run-tests.php -P
 
 after_success:
-  - test $CONF != "with-uref-coverage" || coveralls -b $TRAVIS_BUILD_DIR -E Zend --gcov-options '\-lp'
+  - test $RULE != "uref-test-coverage-travis" || coveralls -b $TRAVIS_BUILD_DIR -E Zend --gcov-options '\-lp'
